src/3_parsing/tiger.grm
%{
#include <stdio.h>
#include "util.h"
#include "errormsg.h"

extern int yylineno;
extern char* yytext;
extern char curr_line[];

int EM_err_count = 0;

int yylex(void); /* function prototype */

void yyerror(char *s)
{

 
 EM_error(EM_tokPos, "\"%s\"\n\t\t%s in line %d, near '%s'\n", curr_line, s, yylineno, yytext);
 EM_err_count += 1;

}
%}

%debug

%union {
	int pos;
	int ival;
	string sval;
	}

%token <sval> ID STRING
%token <ival> INT

%token 
  COMMA COLON SEMICOLON LPAREN RPAREN LBRACK RBRACK 
  LBRACE RBRACE DOT 
  PLUS MINUS TIMES DIVIDE EQ NEQ LT LE GT GE
  AND OR ASSIGN
  ARRAY IF THEN ELSE WHILE FOR TO DO LET IN END OF 
  BREAK NIL
  FUNCTION VAR TYPE 

%left OR
%left AND
%left EQ NEQ LT LE GT GE
%left PLUS MINUS
%left TIMES DIVIDE

%start prog

%%

prog
    :	exp

let
    : LET decs IN expseq END
    ;

decs
    : decs dec
    | error dec
    |
    ;

dec
    : tydec
    | vardec
    | fundec
    ;

tydec
    : TYPE ID EQ ty
ty
    : ID
    | LBRACE tyfields RBRACE
    | ARRAY OF ID
    ;
tyfields
    : ID COLON ID tyfields
    | COMMA tyfields
    | 
    ;

vardec
    : VAR ID ASSIGN exp
    | VAR ID COLON ID ASSIGN exp
    ;

arrdec
    : ID LBRACK exp RBRACK OF exp 
    | ID NIL
    ;

fundec
    : FUNCTION ID LPAREN tyfields RPAREN EQ exp
    | FUNCTION ID LPAREN tyfields RPAREN COLON ID EQ exp
    ;

lvalue
    : ID lvalue_suffix
    ;

lvalue_suffix
    : DOT ID lvalue_suffix
    | LBRACK exp RBRACK lvalue_suffix
    |
    ;

fparams
    : fparams COMMA fparams 
    | IF exp THEN exp ELSE exp
    | exp
    |
    ;

valess
    : ID LPAREN fparams RPAREN
    | lvalue ASSIGN exp
    | IF exp THEN expseq ELSE expseq
    | IF exp THEN expseq
    | WHILE exp DO expseq
    | FOR ID ASSIGN exp TO exp DO expseq
    | BREAK
    ;

recpara
    : ID EQ exp
    | recpara COMMA recpara
    |
    ;
rec
    : ID LBRACE recpara RBRACE

expseq
    : exp
    | expseq SEMICOLON exp
    | error SEMICOLON exp
    |
    ;
exp
    : exp OR exp
    | exp AND exp
    | exp EQ exp
    | exp NEQ exp
    | exp LT exp
    | exp LE exp
    | exp GT exp
    | exp GE exp
    | exp LT GT exp
    | exp PLUS exp
    | MINUS exp
    | exp MINUS exp
    | exp TIMES exp
    | exp DIVIDE exp
    | valess
    | lvalue
    | arrdec
    | rec
    | let
    | NIL
    | INT 
    | STRING
    | LPAREN expseq RPAREN
    | LPAREN error RPAREN
    ;
