src/6_activation_records/y.output
State 1 conflicts: 1 shift/reduce
State 75 conflicts: 12 shift/reduce
State 95 conflicts: 13 shift/reduce
State 96 conflicts: 12 shift/reduce
State 119 conflicts: 12 shift/reduce
State 121 conflicts: 12 shift/reduce
State 136 conflicts: 12 shift/reduce


Grammar

    0 $accept: prog $end

    1 prog: exp

    2 let: LET decs IN expseq END

    3 decs: dec decs
    4     | error decs
    5     | ε

    6 dec: tydec
    7    | vardec
    8    | fundec

    9 tydec: TYPE ID EQ ty

   10 ty: ID
   11   | LBRACE tyfields RBRACE
   12   | ARRAY OF ID

   13 tyfields: ID COLON ID
   14         | ID COLON ID COMMA tyfields
   15         | ε

   16 vardec: VAR ID ASSIGN exp
   17       | VAR ID COLON ID ASSIGN exp

   18 arrdec: ID LBRACK exp RBRACK OF exp
   19       | ID NIL

   20 fundec: FUNCTION ID LPAREN tyfields RPAREN EQ exp
   21       | FUNCTION ID LPAREN tyfields RPAREN COLON ID EQ exp

   22 lvalue: ID
   23       | lvalue DOT ID
   24       | lvalue LBRACK exp RBRACK
   25       | ID LBRACK exp RBRACK

   26 fparams: exp COMMA fparams
   27        | exp
   28        | ε

   29 valess: ID LPAREN fparams RPAREN
   30       | lvalue ASSIGN exp
   31       | IF exp THEN exp ELSE exp
   32       | IF exp THEN exp
   33       | WHILE exp DO exp
   34       | FOR ID ASSIGN exp TO exp DO exp
   35       | BREAK

   36 recpara: ID EQ exp
   37        | ID EQ exp COMMA recpara
   38        | ε

   39 rec: ID LBRACE recpara RBRACE

   40 expseq: exp
   41       | expseq SEMICOLON exp
   42       | error SEMICOLON exp
   43       | ε

   44 exp: exp OR exp
   45    | exp AND exp
   46    | exp EQ exp
   47    | exp NEQ exp
   48    | exp LT exp
   49    | exp LE exp
   50    | exp GT exp
   51    | exp GE exp
   52    | exp PLUS exp
   53    | MINUS exp
   54    | exp MINUS exp
   55    | exp TIMES exp
   56    | exp DIVIDE exp
   57    | valess
   58    | lvalue
   59    | arrdec
   60    | rec
   61    | let
   62    | NIL
   63    | INT
   64    | STRING
   65    | LPAREN expseq RPAREN
   66    | LPAREN error RPAREN


Terminals, with rules where they appear

    $end (0) 0
    error (256) 4 42 66
    ID <sval> (258) 9 10 12 13 14 16 17 18 19 20 21 22 23 25 29 34 36 37 39
    STRING <sval> (259) 64
    INT <ival> (260) 63
    COMMA (261) 14 26 37
    COLON (262) 13 14 17 21
    SEMICOLON (263) 41 42
    LPAREN (264) 20 21 29 65 66
    RPAREN (265) 20 21 29 65 66
    LBRACK (266) 18 24 25
    RBRACK (267) 18 24 25
    LBRACE (268) 11 39
    RBRACE (269) 11 39
    DOT (270) 23
    PLUS (271) 52
    MINUS (272) 53 54
    TIMES (273) 55
    DIVIDE (274) 56
    EQ (275) 9 20 21 36 37 46
    NEQ (276) 47
    LT (277) 48
    LE (278) 49
    GT (279) 50
    GE (280) 51
    AND (281) 45
    OR (282) 44
    ASSIGN (283) 16 17 30 34
    ARRAY (284) 12
    IF (285) 31 32
    THEN (286) 31 32
    ELSE (287) 31
    WHILE (288) 33
    FOR (289) 34
    TO (290) 34
    DO (291) 33 34
    LET (292) 2
    IN (293) 2
    END (294) 2
    OF (295) 12 18
    BREAK (296) 35
    NIL (297) 19 62
    FUNCTION (298) 20 21
    VAR (299) 16 17
    TYPE (300) 9


Nonterminals, with rules where they appear

    $accept (46)
        on left: 0
    prog <exp> (47)
        on left: 1
        on right: 0
    let <exp> (48)
        on left: 2
        on right: 61
    decs <decl> (49)
        on left: 3 4 5
        on right: 2 3 4
    dec <dec> (50)
        on left: 6 7 8
        on right: 3
    tydec <nametyl> (51)
        on left: 9
        on right: 6
    ty <ty> (52)
        on left: 10 11 12
        on right: 9
    tyfields <fieldl> (53)
        on left: 13 14 15
        on right: 11 14 20 21
    vardec <dec> (54)
        on left: 16 17
        on right: 7
    arrdec <exp> (55)
        on left: 18 19
        on right: 59
    fundec <fundecl> (56)
        on left: 20 21
        on right: 8
    lvalue <var> (57)
        on left: 22 23 24 25
        on right: 23 24 30 58
    fparams <expl> (58)
        on left: 26 27 28
        on right: 26 29
    valess <exp> (59)
        on left: 29 30 31 32 33 34 35
        on right: 57
    recpara <efieldl> (60)
        on left: 36 37 38
        on right: 37 39
    rec <exp> (61)
        on left: 39
        on right: 60
    expseq <exp> (62)
        on left: 40 41 42 43
        on right: 2 41 65
    exp <exp> (63)
        on left: 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66
        on right: 1 16 17 18 20 21 24 25 26 27 30 31 32 33 34 36 37 40 41 42 44 45 46 47 48 49 50 51 52 53 54 55 56


State 0

    0 $accept: • prog $end

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    prog    go to state 12
    let     go to state 13
    arrdec  go to state 14
    lvalue  go to state 15
    valess  go to state 16
    rec     go to state 17
    exp     go to state 18


State 1

   18 arrdec: ID • LBRACK exp RBRACK OF exp
   19       | ID • NIL
   22 lvalue: ID •
   25       | ID • LBRACK exp RBRACK
   29 valess: ID • LPAREN fparams RPAREN
   39 rec: ID • LBRACE recpara RBRACE

    LPAREN  shift, and go to state 19
    LBRACK  shift, and go to state 20
    LBRACE  shift, and go to state 21
    NIL     shift, and go to state 22

    LBRACK    [reduce using rule 22 (lvalue)]
    $default  reduce using rule 22 (lvalue)


State 2

   64 exp: STRING •

    $default  reduce using rule 64 (exp)


State 3

   63 exp: INT •

    $default  reduce using rule 63 (exp)


State 4

   65 exp: LPAREN • expseq RPAREN
   66    | LPAREN • error RPAREN

    error   shift, and go to state 23
    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    SEMICOLON  reduce using rule 43 (expseq)
    RPAREN     reduce using rule 43 (expseq)

    let     go to state 13
    arrdec  go to state 14
    lvalue  go to state 15
    valess  go to state 16
    rec     go to state 17
    expseq  go to state 24
    exp     go to state 25


State 5

   53 exp: MINUS • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    let     go to state 13
    arrdec  go to state 14
    lvalue  go to state 15
    valess  go to state 16
    rec     go to state 17
    exp     go to state 26


State 6

   31 valess: IF • exp THEN exp ELSE exp
   32       | IF • exp THEN exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    let     go to state 13
    arrdec  go to state 14
    lvalue  go to state 15
    valess  go to state 16
    rec     go to state 17
    exp     go to state 27


State 7

   33 valess: WHILE • exp DO exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    let     go to state 13
    arrdec  go to state 14
    lvalue  go to state 15
    valess  go to state 16
    rec     go to state 17
    exp     go to state 28


State 8

   34 valess: FOR • ID ASSIGN exp TO exp DO exp

    ID  shift, and go to state 29


State 9

    2 let: LET • decs IN expseq END

    error     shift, and go to state 30
    FUNCTION  shift, and go to state 31
    VAR       shift, and go to state 32
    TYPE      shift, and go to state 33

    IN  reduce using rule 5 (decs)

    decs    go to state 34
    dec     go to state 35
    tydec   go to state 36
    vardec  go to state 37
    fundec  go to state 38


State 10

   35 valess: BREAK •

    $default  reduce using rule 35 (valess)


State 11

   62 exp: NIL •

    $default  reduce using rule 62 (exp)


State 12

    0 $accept: prog • $end

    $end  shift, and go to state 39


State 13

   61 exp: let •

    $default  reduce using rule 61 (exp)


State 14

   59 exp: arrdec •

    $default  reduce using rule 59 (exp)


State 15

   23 lvalue: lvalue • DOT ID
   24       | lvalue • LBRACK exp RBRACK
   30 valess: lvalue • ASSIGN exp
   58 exp: lvalue •

    LBRACK  shift, and go to state 40
    DOT     shift, and go to state 41
    ASSIGN  shift, and go to state 42

    $default  reduce using rule 58 (exp)


State 16

   57 exp: valess •

    $default  reduce using rule 57 (exp)


State 17

   60 exp: rec •

    $default  reduce using rule 60 (exp)


State 18

    1 prog: exp •
   44 exp: exp • OR exp
   45    | exp • AND exp
   46    | exp • EQ exp
   47    | exp • NEQ exp
   48    | exp • LT exp
   49    | exp • LE exp
   50    | exp • GT exp
   51    | exp • GE exp
   52    | exp • PLUS exp
   54    | exp • MINUS exp
   55    | exp • TIMES exp
   56    | exp • DIVIDE exp

    PLUS    shift, and go to state 43
    MINUS   shift, and go to state 44
    TIMES   shift, and go to state 45
    DIVIDE  shift, and go to state 46
    EQ      shift, and go to state 47
    NEQ     shift, and go to state 48
    LT      shift, and go to state 49
    LE      shift, and go to state 50
    GT      shift, and go to state 51
    GE      shift, and go to state 52
    AND     shift, and go to state 53
    OR      shift, and go to state 54

    $default  reduce using rule 1 (prog)


State 19

   29 valess: ID LPAREN • fparams RPAREN

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    $default  reduce using rule 28 (fparams)

    let      go to state 13
    arrdec   go to state 14
    lvalue   go to state 15
    fparams  go to state 55
    valess   go to state 16
    rec      go to state 17
    exp      go to state 56


State 20

   18 arrdec: ID LBRACK • exp RBRACK OF exp
   25 lvalue: ID LBRACK • exp RBRACK

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    let     go to state 13
    arrdec  go to state 14
    lvalue  go to state 15
    valess  go to state 16
    rec     go to state 17
    exp     go to state 57


State 21

   39 rec: ID LBRACE • recpara RBRACE

    ID  shift, and go to state 58

    $default  reduce using rule 38 (recpara)

    recpara  go to state 59


State 22

   19 arrdec: ID NIL •

    $default  reduce using rule 19 (arrdec)


State 23

   42 expseq: error • SEMICOLON exp
   66 exp: LPAREN error • RPAREN

    SEMICOLON  shift, and go to state 60
    RPAREN     shift, and go to state 61


State 24

   41 expseq: expseq • SEMICOLON exp
   65 exp: LPAREN expseq • RPAREN

    SEMICOLON  shift, and go to state 62
    RPAREN     shift, and go to state 63


State 25

   40 expseq: exp •
   44 exp: exp • OR exp
   45    | exp • AND exp
   46    | exp • EQ exp
   47    | exp • NEQ exp
   48    | exp • LT exp
   49    | exp • LE exp
   50    | exp • GT exp
   51    | exp • GE exp
   52    | exp • PLUS exp
   54    | exp • MINUS exp
   55    | exp • TIMES exp
   56    | exp • DIVIDE exp

    PLUS    shift, and go to state 43
    MINUS   shift, and go to state 44
    TIMES   shift, and go to state 45
    DIVIDE  shift, and go to state 46
    EQ      shift, and go to state 47
    NEQ     shift, and go to state 48
    LT      shift, and go to state 49
    LE      shift, and go to state 50
    GT      shift, and go to state 51
    GE      shift, and go to state 52
    AND     shift, and go to state 53
    OR      shift, and go to state 54

    $default  reduce using rule 40 (expseq)


State 26

   44 exp: exp • OR exp
   45    | exp • AND exp
   46    | exp • EQ exp
   47    | exp • NEQ exp
   48    | exp • LT exp
   49    | exp • LE exp
   50    | exp • GT exp
   51    | exp • GE exp
   52    | exp • PLUS exp
   53    | MINUS exp •
   54    | exp • MINUS exp
   55    | exp • TIMES exp
   56    | exp • DIVIDE exp

    TIMES   shift, and go to state 45
    DIVIDE  shift, and go to state 46

    $default  reduce using rule 53 (exp)


State 27

   31 valess: IF exp • THEN exp ELSE exp
   32       | IF exp • THEN exp
   44 exp: exp • OR exp
   45    | exp • AND exp
   46    | exp • EQ exp
   47    | exp • NEQ exp
   48    | exp • LT exp
   49    | exp • LE exp
   50    | exp • GT exp
   51    | exp • GE exp
   52    | exp • PLUS exp
   54    | exp • MINUS exp
   55    | exp • TIMES exp
   56    | exp • DIVIDE exp

    PLUS    shift, and go to state 43
    MINUS   shift, and go to state 44
    TIMES   shift, and go to state 45
    DIVIDE  shift, and go to state 46
    EQ      shift, and go to state 47
    NEQ     shift, and go to state 48
    LT      shift, and go to state 49
    LE      shift, and go to state 50
    GT      shift, and go to state 51
    GE      shift, and go to state 52
    AND     shift, and go to state 53
    OR      shift, and go to state 54
    THEN    shift, and go to state 64


State 28

   33 valess: WHILE exp • DO exp
   44 exp: exp • OR exp
   45    | exp • AND exp
   46    | exp • EQ exp
   47    | exp • NEQ exp
   48    | exp • LT exp
   49    | exp • LE exp
   50    | exp • GT exp
   51    | exp • GE exp
   52    | exp • PLUS exp
   54    | exp • MINUS exp
   55    | exp • TIMES exp
   56    | exp • DIVIDE exp

    PLUS    shift, and go to state 43
    MINUS   shift, and go to state 44
    TIMES   shift, and go to state 45
    DIVIDE  shift, and go to state 46
    EQ      shift, and go to state 47
    NEQ     shift, and go to state 48
    LT      shift, and go to state 49
    LE      shift, and go to state 50
    GT      shift, and go to state 51
    GE      shift, and go to state 52
    AND     shift, and go to state 53
    OR      shift, and go to state 54
    DO      shift, and go to state 65


State 29

   34 valess: FOR ID • ASSIGN exp TO exp DO exp

    ASSIGN  shift, and go to state 66


State 30

    4 decs: error • decs

    error     shift, and go to state 30
    FUNCTION  shift, and go to state 31
    VAR       shift, and go to state 32
    TYPE      shift, and go to state 33

    IN  reduce using rule 5 (decs)

    decs    go to state 67
    dec     go to state 35
    tydec   go to state 36
    vardec  go to state 37
    fundec  go to state 38


State 31

   20 fundec: FUNCTION • ID LPAREN tyfields RPAREN EQ exp
   21       | FUNCTION • ID LPAREN tyfields RPAREN COLON ID EQ exp

    ID  shift, and go to state 68


State 32

   16 vardec: VAR • ID ASSIGN exp
   17       | VAR • ID COLON ID ASSIGN exp

    ID  shift, and go to state 69


State 33

    9 tydec: TYPE • ID EQ ty

    ID  shift, and go to state 70


State 34

    2 let: LET decs • IN expseq END

    IN  shift, and go to state 71


State 35

    3 decs: dec • decs

    error     shift, and go to state 30
    FUNCTION  shift, and go to state 31
    VAR       shift, and go to state 32
    TYPE      shift, and go to state 33

    IN  reduce using rule 5 (decs)

    decs    go to state 72
    dec     go to state 35
    tydec   go to state 36
    vardec  go to state 37
    fundec  go to state 38


State 36

    6 dec: tydec •

    $default  reduce using rule 6 (dec)


State 37

    7 dec: vardec •

    $default  reduce using rule 7 (dec)


State 38

    8 dec: fundec •

    $default  reduce using rule 8 (dec)


State 39

    0 $accept: prog $end •

    $default  accept


State 40

   24 lvalue: lvalue LBRACK • exp RBRACK

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    let     go to state 13
    arrdec  go to state 14
    lvalue  go to state 15
    valess  go to state 16
    rec     go to state 17
    exp     go to state 73


State 41

   23 lvalue: lvalue DOT • ID

    ID  shift, and go to state 74


State 42

   30 valess: lvalue ASSIGN • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    let     go to state 13
    arrdec  go to state 14
    lvalue  go to state 15
    valess  go to state 16
    rec     go to state 17
    exp     go to state 75


State 43

   52 exp: exp PLUS • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    let     go to state 13
    arrdec  go to state 14
    lvalue  go to state 15
    valess  go to state 16
    rec     go to state 17
    exp     go to state 76


State 44

   54 exp: exp MINUS • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    let     go to state 13
    arrdec  go to state 14
    lvalue  go to state 15
    valess  go to state 16
    rec     go to state 17
    exp     go to state 77


State 45

   55 exp: exp TIMES • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    let     go to state 13
    arrdec  go to state 14
    lvalue  go to state 15
    valess  go to state 16
    rec     go to state 17
    exp     go to state 78


State 46

   56 exp: exp DIVIDE • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    let     go to state 13
    arrdec  go to state 14
    lvalue  go to state 15
    valess  go to state 16
    rec     go to state 17
    exp     go to state 79


State 47

   46 exp: exp EQ • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    let     go to state 13
    arrdec  go to state 14
    lvalue  go to state 15
    valess  go to state 16
    rec     go to state 17
    exp     go to state 80


State 48

   47 exp: exp NEQ • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    let     go to state 13
    arrdec  go to state 14
    lvalue  go to state 15
    valess  go to state 16
    rec     go to state 17
    exp     go to state 81


State 49

   48 exp: exp LT • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    let     go to state 13
    arrdec  go to state 14
    lvalue  go to state 15
    valess  go to state 16
    rec     go to state 17
    exp     go to state 82


State 50

   49 exp: exp LE • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    let     go to state 13
    arrdec  go to state 14
    lvalue  go to state 15
    valess  go to state 16
    rec     go to state 17
    exp     go to state 83


State 51

   50 exp: exp GT • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    let     go to state 13
    arrdec  go to state 14
    lvalue  go to state 15
    valess  go to state 16
    rec     go to state 17
    exp     go to state 84


State 52

   51 exp: exp GE • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    let     go to state 13
    arrdec  go to state 14
    lvalue  go to state 15
    valess  go to state 16
    rec     go to state 17
    exp     go to state 85


State 53

   45 exp: exp AND • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    let     go to state 13
    arrdec  go to state 14
    lvalue  go to state 15
    valess  go to state 16
    rec     go to state 17
    exp     go to state 86


State 54

   44 exp: exp OR • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    let     go to state 13
    arrdec  go to state 14
    lvalue  go to state 15
    valess  go to state 16
    rec     go to state 17
    exp     go to state 87


State 55

   29 valess: ID LPAREN fparams • RPAREN

    RPAREN  shift, and go to state 88


State 56

   26 fparams: exp • COMMA fparams
   27        | exp •
   44 exp: exp • OR exp
   45    | exp • AND exp
   46    | exp • EQ exp
   47    | exp • NEQ exp
   48    | exp • LT exp
   49    | exp • LE exp
   50    | exp • GT exp
   51    | exp • GE exp
   52    | exp • PLUS exp
   54    | exp • MINUS exp
   55    | exp • TIMES exp
   56    | exp • DIVIDE exp

    COMMA   shift, and go to state 89
    PLUS    shift, and go to state 43
    MINUS   shift, and go to state 44
    TIMES   shift, and go to state 45
    DIVIDE  shift, and go to state 46
    EQ      shift, and go to state 47
    NEQ     shift, and go to state 48
    LT      shift, and go to state 49
    LE      shift, and go to state 50
    GT      shift, and go to state 51
    GE      shift, and go to state 52
    AND     shift, and go to state 53
    OR      shift, and go to state 54

    $default  reduce using rule 27 (fparams)


State 57

   18 arrdec: ID LBRACK exp • RBRACK OF exp
   25 lvalue: ID LBRACK exp • RBRACK
   44 exp: exp • OR exp
   45    | exp • AND exp
   46    | exp • EQ exp
   47    | exp • NEQ exp
   48    | exp • LT exp
   49    | exp • LE exp
   50    | exp • GT exp
   51    | exp • GE exp
   52    | exp • PLUS exp
   54    | exp • MINUS exp
   55    | exp • TIMES exp
   56    | exp • DIVIDE exp

    RBRACK  shift, and go to state 90
    PLUS    shift, and go to state 43
    MINUS   shift, and go to state 44
    TIMES   shift, and go to state 45
    DIVIDE  shift, and go to state 46
    EQ      shift, and go to state 47
    NEQ     shift, and go to state 48
    LT      shift, and go to state 49
    LE      shift, and go to state 50
    GT      shift, and go to state 51
    GE      shift, and go to state 52
    AND     shift, and go to state 53
    OR      shift, and go to state 54


State 58

   36 recpara: ID • EQ exp
   37        | ID • EQ exp COMMA recpara

    EQ  shift, and go to state 91


State 59

   39 rec: ID LBRACE recpara • RBRACE

    RBRACE  shift, and go to state 92


State 60

   42 expseq: error SEMICOLON • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    let     go to state 13
    arrdec  go to state 14
    lvalue  go to state 15
    valess  go to state 16
    rec     go to state 17
    exp     go to state 93


State 61

   66 exp: LPAREN error RPAREN •

    $default  reduce using rule 66 (exp)


State 62

   41 expseq: expseq SEMICOLON • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    let     go to state 13
    arrdec  go to state 14
    lvalue  go to state 15
    valess  go to state 16
    rec     go to state 17
    exp     go to state 94


State 63

   65 exp: LPAREN expseq RPAREN •

    $default  reduce using rule 65 (exp)


State 64

   31 valess: IF exp THEN • exp ELSE exp
   32       | IF exp THEN • exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11
